more playtest cards

--- a/src/data/grammar/mtg/card-related/adj-mtg-related.yaml
+++ b/src/data/grammar/mtg/card-related/adj-mtg-related.yaml
@@ -5,21 +5,29 @@ adjMtgRelated:
 
 mtgCreaturePrefix:
 - "#adjMtgCreature#"
-- "#adjNounMtgCreaturePrefix#"
 
 adjMtgCreature:
-- "baneslayer"  
+- "baneslayer"
+- "bloodbraid"
+- "bonecrusher" 
+- "combustable" 
+- "deathrite"
+- "lightning"
+- "lovestruck"
+- "inquisitive"
+- "meddling"
 - "noxious"
 - "primeval"
-- "combustable"
-- "stoic"
-- "lightning"
-- "inquisitive"
-
-adjNounMtgCreaturePrefix:
-  - 
+- "questing"
+- "reflector"
+- "snapcaster"
+- "stinkweed"
+- "stoneforge"
+- "thought-knot"
 
 nounMtgUncivilizedCreature:
+- "amalgam"
+- "grave-troll"
 - "hatcher"
 - "monster"
 - "murlodont"
@@ -30,16 +38,22 @@ mtgCreatureRoleNoun:
 - "assassin"
 - "attendant"
 - "brigade"
+- "chainwhirler"
 - "chosen"
 - "confidant"
 - "emissary"
 - "familiar"
 - "herald"
+- "hexmage"
+- "hierarch"
 - "marauder"
 - "protector"
 - "puppet"
+- "pyromancer"
+- "spirit guide"
+- "swiftspear"
 - "vanguard"
 - "warden"
 - "#nounVerber#"
-- "[_verbToPart:crusher,eater,ripper,smasher]#bodypart##_verbToPart#"
-- "[_beverage:#liquid.nospaces#,#nounCompoundWorthy#]#beverage#drinker"
+- "[_verbToPart:crusher,-eater,ripper,smasher]#bodypart##_verbToPart#"
+- "[_beverage:#liquid.noSpaces#,#nounCompoundWorthy#]#_beverage#drinker"
