more playtest cards

--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -100,7 +100,8 @@
       "a goldfish[#neutralPronouns#]",
       "Atlee Hammaker[#malePronouns#]",
       "Bill Stickers[#malePronouns#]",
-      "Vanilla Phil[#malePronouns#]"
+      "Vanilla Phil[#malePronouns#]",
+      "Moonvest[#malePronouns#]"
   ],
 
   "proMisc": [
