--- a/src/data/grammar/mtg/products/playtest-card-names.yaml
+++ b/src/data/grammar/mtg/products/playtest-card-names.yaml
@@ -28,10 +28,7 @@ playtestCardGeneric:
 - "#playtestCardFirstName#'s [_possession:#playtestCardUniqueSpellName#,#playtestCardLackey#,#nounMundane#]#_possession.capitalizeAll#"
 - "#characterClass.capitalizeAll#'s #cardFlavorTypeOfSpell.capitalizeAll#"
 - "[_doer:diver,chaser,miner]#massNoun.hyphenate.capitalize# #_doer.capitalizeAll#"
-
-playtestCardGeneric2:
-- "[_stuffDoer:flinger,drinker,shaper,bringer][_thingMaster:master,speaker,stalker,peddler,juggler,snatcher,forger][_stuff:#liquidCompoundWorthy#,#nounNonsenseCompoundSource#][_thing:#nounCompoundWorthy#,#nounNonsenseCompoundSource#,#bodypartCompoundWorthy#][_nonhyphenated:#_stuff##_stuffDoer#,#_thing##_thingMaster#][_hyphenated:#_stuff#-#_stuffDoer#,#_thing#-#_thingMaster#][_doerResult:#_nonhyphenated.noSpaces#,#placeFactionOrAffiliated# #_nonhyphenated.noSpaces#,#placeFactionOrAffiliated# #_hyphenated#]#_doerResult.capitalizeAll#"
-
+- "[_stuffDoer:flinger,drinker,shaper,bringer,singer,swallower][_thingMaster:master,speaker,stalker,peddler,juggler,snatcher,forger,breaker,smasher,bearer][_stuff:#liquidCompoundWorthy#,#nounNonsenseCompoundSource#][_thing:#nounCompoundWorthy#,#nounNonsenseCompoundSource#,#bodypartCompoundWorthy#][_nonhyphenated:#_stuff##_stuffDoer#,#_thing.hyphenate##_thingMaster#][_hyphenated:#_stuff.hyphenate#-#_stuffDoer#,#_thing.hyphenate#-#_thingMaster#][_doerResult:#_nonhyphenated.noSpaces#,#placeFactionOrAffiliated# #_nonhyphenated.noSpaces#,#placeFactionOrAffiliated# #_hyphenated#]#_doerResult.capitalizeAll#"
 
 playtestCardSpecificReference:
 - "#playtestCardSpecificReferenceEldraine#"
@@ -59,13 +56,7 @@ playtestCardSpecificReferenceMisc:
 - "[_adj:#adjPersonCharacteristic#,#adjPersonCharacteristic#,#adjPersonCharacteristicComparative#,#adjPersonCharacteristicSuperlative#][_magicType:#nounCompoundWorthy#,#nounNonsenseCompoundSource#,#massNoun.hyphenate#][_mancerPrefix:#academicPrefix#,#_magicType#][_mancer:#_adj.capitalizeAll# Pyromancer,Young #_magicType.capitalize#mancer]#_mancer#"
 - "#nounNonsenseCompoundSource.capitalize#ify"
 - "Extra [_parts:#bodypartsPlural.capitalizeAll#]#_parts.replace(Arms,Legs)#"
-
-playtestCardSpecificReferenceMisc2:
-  - "[_ridden:#animal#,#animal#,#creatureTypes#,#bodypart#][_rider:Rider,Rider,Wrangler,Herder,Chaser][_sourceOrAdj:#adjRoleDescription#,##][_riderName:#_ridden.capitalizeAll.hyphenate# #_rider#,#planeswalkerFirstName#'s #_ridden.capitalizeAll#-#_rider.capitalizeAll#]#_riderName.capitalizeAll#"
-
-playtestCardDebug:
- - "#playtestCardGeneric2#"    
- - "#playtestCardSpecificReferenceMisc2#"  
+- "[_ridden:#animal#,#animal#,#creatureTypes#,#bodypart#][_rider:Rider,Rider,Wrangler,Herder,Chaser,Hunter][_sourceOrAdj:#adjRoleDescription#,##][_riderName:#_ridden.capitalizeAll.hyphenate# #_rider#,#planeswalkerFirstName#'s #_ridden.hyphenate.capitalizeAll#-#_rider.capitalizeAll#]#_riderName.capitalizeAll#"
 
 playtestCardSpecificReferenceUnset:
 - "[_whatAmI:#animal.capitalizeAll.a#,#itemNoun.capitalizeAll.a#,#personPejorativeAny.capitalizeAll.a#,#officialEntityGroup#,#miscPersonSingular.capitalizeAll#][_meIm:me#comma# I'm,you#comma# you're,them#comma# they're]Look at #_meIm.capitalizeAll# #_whatAmI#"
@@ -75,7 +66,7 @@ playtestCardSpecificReferenceUnset:
 - "[_possession:#appliance#,#gameAccessory#,#clothingOrAccessory#,#placeNoun#]#character#'s #_possession.capitalizeAll#"
 - "#playtestCardSpecificReferenceUnsetInfrequent#"
 - "Loose #bodypartsInPairs.capitalizeAll#"
-- "My First [_what:#nounWeapon#,#gameAccessory#,#appliance#]#_what.capitalizeAll#"
+- "My First [_what:#nounWeapon#,#nounWeapon#,#gameAccessory#,#gameAccessory#,#appliance#,#appliance#,#constructedFormat# deck]#_what.capitalizeAll#"
 - "[_tripleThis:#nounNonsenseCompoundSource.capitalizeAll#][_tripleThat:#massNoun.capitalizeAll#][_thisTripled:#_tripleThis# #_tripleThis# #_tripleThis#][_thatTripled:#_tripleThat# #_tripleThat# #_tripleThat#][_tripled:#_thisTripled#,#_thisTripled#,#_thatTripled#]#_tripled#"
 
 playtestCardSpecificReferenceUnsetInfrequent:
@@ -90,7 +81,7 @@ playtestCardSpecificReferenceMysteryBooster:
 - "[_kindOf:#nounCompoundWorthy#,#nounCompoundWorthy#,#deckNameCompoundPrefix#,#massNoun.noSpaces#][_pox:pox,lace,potence]#_kindOf.capitalize##_pox#"
 - "[_withWhat:#massNoun#,#abstractNounPluralItemNounMassNounOrEmotion#,#officialEntityGroup#,#mtgRandomTopic#,#mtgQuestionablePractice#]One with #_withWhat.capitalizeAll#"
 - "#creatureTypes.capitalizeAll# with #creatureKeyword.capitalizeAll#"
-- "[_who:#officialEntity#][_mightHave:might have,has][_goneNuts:'s Gone Nuts, Has Lost #their.capitalize# Marbles,'s Gone Batty, is Having an Episode, is Off #their.capitalize# Meds, Got Hit By a Bus, is Freaking Out,'s Drunk With Power, Has Amnesia, #_mightHave.capitalizeAll# a Brain Parasite, is Behaving Out of Character,'s on a Sugar High, Has Definitely Not Been Mind Controlled By Gleemax,'s in a Beserker Rage, is Foaming at the Mouth, Doesn't Want to Lose #their.capitalize# Job, Has Eaten Too Many Mushrooms,'s on Thin Ice, Has Also Gone Nuts , Has Calmed Down Finally, Hates Fun, Doesn't Care Anymore]#_who.capitalize##_goneNuts#"
+- "[_who:#officialEntity#][_mightHave:might have,has][_goneNuts:'s Gone Nuts, Has Lost #their.capitalize# Marbles,'s Gone Batty, is Having an Episode, is Off #their.capitalize# Meds, Got Hit By a Bus, is Freaking Out,'s Drunk With Power, Has Amnesia, #_mightHave.capitalizeAll# a Brain Parasite, is Behaving Out of Character,'s on a Sugar High, Has Definitely Not Been Mind Controlled By Gleemax,'s in a Beserker Rage, is Foaming at the Mouth, Doesn't Want to Lose #their.capitalize# Job, Has Eaten Too Many Mushrooms,'s on Thin Ice, Has Also Gone Nuts , Has Calmed Down Finally, Hates Fun, Just Doesn't Care Anymore]#_who.capitalize##_goneNuts#"
 - "[_cardTypeQuery:sorcery][#cardTypeCardWithOneWordName#]#_cardName.reverse.lowercase.capitalizeAll#"
 - "[_mood:#mood#,#adjBodySensation#,#adjCorporeal#,#adjStorybook#,#adj#,#character#'s]#_mood.capitalize.hyphenate# Killbot"
 
@@ -115,9 +106,9 @@ _playtestMysteryBoosterKidAndCount:
 playtestCardSpecificReferenceEldraine:
   - "Castle [_castleName:#commonCharacterLastName#, #characterFaction#]#_castleName.capitalizeAll#"
   - "Syr [_syrName:#commonCharacterFirstName#,#firstName#]#_syrName#, the #adj.capitalizeAll#"
-  - "So #adj.capitalizeAll#"
+  - "So [_what:#adj#,#mood#]#_what.capitalizeAll#"
   - "#massNounCompoundWorthy.capitalize.hyphenate#brute"  
   - "Cavalier of [_what:#massNoun#,#mtgQuestionablePractice#,#abstractNounPluralItemNounMassNounOrEmotion#]#_what.capitalizeAll#"  
   - "[_verb:#verbExtinguishSpecific.capitalizeAll#][_place:#placeNoun.capitalizeAll#][_xInTheY:#_verb.capitalizeAll# in the Loch,Drown in the #_place.capitalizeAll#,#_verb.capitalizeAll# in the #_place.capitalizeAll#]#_xInTheY#"
-  - "[_politePhrase:thank you,you're welcome,excuse me,sorry,bless you,beg your pardon,may I be excused,by all means,hello,anything,the magic word,love you too,may I,peep,#exasperatedLeadIn#][_what:#simpleExclamation#,#simpleExclamation#,#_politePhrase#]Didn't Say #_what.capitalizeAll#"
+  - "[_politePhrase:thank you,you're welcome,excuse me,sorry,bless you,beg your pardon,may I be excused,by all means,hello,anything,the magic word,love you too,may I,peep,#exasperatedLeadIn#][_what:#simpleExclamation#,#simpleExclamation#,#_politePhrase#][_didntSay:Didn't Say #_what.capitalizeAll#][_politeAct:Put the Seat Down,Use a Napkin,Use Your Turn Signal,Clean Up After Your Pet,Put Your Cart Back,Arrive on Time,Introduce Me,Make Eye Contact,Bring a Gift,Tip Enough,Wait Your Turn,Use the Correct  Fork][_didntDo:Didn't #_politeAct#][_criticism:#_didntSay#,#_didntSay#,#_didntDo#]#_criticism#"
   - "[_baked:Baked into #bakedFood.capitalizeAll.a#][_ground:Ground into #groundFood.capitalizeAll.a#][_flattenedWord:Flattened,Flattened,Pounded,Smashed][_flattened:#_flattenedWord# into #flattenedFood.capitalizeAll.a#][_stuffed:Stuffed into #stuffedFood.capitalizeAll.a#][_preparation:#_baked#,#_ground#,#_flattened#,#_stuffed#]#_preparation#"
